# l10n-germany

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
.github/workflows/: test.yml
datev_export/: README.rst  __manifest__.py
datev_export/i18n/: datev_export.pot
datev_export/views/: res_config_settings_views.xml
datev_export_dtvf/: README.rst  __manifest__.py  datev.py
datev_export_dtvf/data/: ir_cron.xml  mail_template.xml
datev_export_dtvf/i18n/: datev_export_dtvf.pot
datev_export_dtvf/models/: __init__.py  account_account.py  datev_export_dtvf.py  res_company.py  res_config_settings.py
datev_export_dtvf/readme/: CONFIGURE.md  ROADMAP.md  USAGE.md
datev_export_dtvf/tests/: test_datev_export_dtvf.py
datev_export_dtvf/views/: account_account.xml  datev_export_dtvf.xml  res_config_settings.xml  res_partner.xml
datev_export_xml/: README.rst  __manifest__.py
datev_export_xml/controllers/: main.py
datev_export_xml/data/: ir_cron_data.xml
datev_export_xml/demo/: export_data.xml
datev_import_csv_dtvf/: README.rst  __manifest__.py
hr_expense_meal_allowance/: README.rst  __manifest__.py
l10n_de_location_nuts/: README.rst  __manifest__.py
l10n_de_mis_reports/: __manifest__.py
l10n_de_tax_statement/: README.rst  __manifest__.py
l10n_de_tax_statement_zm/: README.rst  __manifest__.py
l10n_din5008_company_header_country_invisible/: README.rst  __manifest__.py
l10n_din5008_move_name/: README.rst  __manifest__.py
l10n_din5008_partner_ref/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+87 files in other folders)
