[project]
name = "odoo-addons-oca-l10n-germany"
version = "18.0.20251027.0"
dependencies = [
    "odoo-addon-datev_import_csv_dtvf==18.0.*",
    "odoo-addon-l10n_de_location_nuts==18.0.*",
    "odoo-addon-l10n_de_tax_statement==18.0.*",
    "odoo-addon-l10n_de_tax_statement_zm==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
