[project]
name = "odoo-addons-oca-l10n-germany"
version = "18.0.20260319.0"
dependencies = [
    "odoo-addon-datev_export==18.0.*",
    "odoo-addon-datev_export_xml==18.0.*",
    "odoo-addon-datev_import_csv_dtvf==18.0.*",
    "odoo-addon-l10n_de_location_nuts==18.0.*",
    "odoo-addon-l10n_de_tax_statement==18.0.*",
    "odoo-addon-l10n_de_tax_statement_zm==18.0.*",
    "odoo-addon-l10n_din5008_move_name==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
