[project]
name = "odoo-addons-oca-l10n-germany"
version = "19.0.20260424.2"
dependencies = [
    "odoo-addon-datev_export==19.0.*",
    "odoo-addon-datev_export_dtvf==19.0.*",
    "odoo-addon-datev_import_csv_dtvf==19.0.*",
    "odoo-addon-l10n_din5008_move_name==19.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 19.0",
]
